<resources>
    <string name="app_name">Coagusearch</string>


    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_accountinformations">accountinformations</string>
    <string name="errorOccurred">Error Occured</string>
    <!--LoginScreen-->
    <string name="rememberMe">Remember Me</string>
    <string name="hintTc">Identity Number</string>
    <string name="passwordHint">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="login">Login</string>
    <!-- Bottom Navigation-->
    <string name="delete">Delete</string>
    <string name="menu">Menu</string>
    <string name="appointments">Appointments</string>
    <string name="account">Account</string>
    <!--MainMenu-->
    <string name="welcome">Welcome</string>
    <!--AppointmentsPage-->
    <string name="myAppointments">My Appointments</string>
    <string name="requestAppointment">Request Appointment</string>
    <!--PersonPage-->
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="surname">Surname</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="edit">Edit</string>
    <string name="addNewMedicine">Add new Medicine</string>
    <!--Account Page-->
    <string name="accountInfo">Account Information</string>
    <string name="birthdate">Birth Date</string>
    <string name="bloodType"> Blood Type</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <!--Missing Info-->
    <string name="missingName">Please fill your name</string>
    <string name="missingSurName">Please fill your surname</string>
    <string name="missingBirthdate">Please fill your bithdate</string>
    <string name="missingWeight">Please fill your weight</string>
    <string name="missingHeight">Please fill your height</string>
    <!--Others-->
    <string name="nextAppointment">Next Appointment</string>
    <string name="missingInfo">"Please enter your missing information to enable decision system to help your doctor"</string>
    <string name="analysisCompleted">The analysis completed</string>
    <string name="yourDoctor">Your Doctor</string>
    <string name="appointmentDate">Appointment Date</string>
    <string name="appointmentTimeSlot">Appointment Time Slot</string>
    <string name="searchMedicine">Search Medicine</string>
    <string name="addMedicine">Add Medicine</string>
    <string name="cancel">Cancel</string>
    <string name="medicine">Medicine</string>
    <string name="frequency">Frequency</string>
    <string name="done">Done</string>
    <string name="dosage">Dosage</string>
    <!--DoctorMaşn-->
    <string name="doctormenu">Menu</string>
    <string name="notification">Notifications</string>
    <string name="patients">Patients</string>
    <string name="bloodbank">Blood Bank</string>

    <string name="callpatientfornext">Call patient for next appointment</string>
    <string name="lastutemdataanalysis">Last utem data analysis</string>


    <string name="today">Today</string>
    <string name="emergencypatients">Emergency Patients</string>
    <string name="totalpatients">Total Patients:</string>


    <string name="makeorder">Make Order</string>
    <string name="mypatients">My Patients</string>
    <string name="searchpatient">Search Patient</string>


    <string name="chechlastdata">Check Past µTem data analysis</string>
    <string name="producttype">Product Type</string>
    <string name="frozen">Fresh frozen plasma</string>
    <string name="plateret">Platelet concentrate</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletesure">Are you sure?</string>
    <string name="heightvcm">(cm)</string>
    <string name="weightkg">(kg)</string>


    <string name="decidetreatment">Decide Treatment</string>
    <string name="suggestions">Suggestions</string>
    <string name="patientbloodorder">Patient Blood Order</string>
    <string name="regularmedicine">Regular Medicine</string>
    <string name="addpatient">Add Patient</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="patientinfo">Patient Information</string>
    <string name="removepatient">Remove Patient</string>
    <string name="uTemdataanalysis">µTem Data Analysis</string>
    <string name="takeaction">Take Action</string>
    <string name="patientappointments">Patient Appointments</string>
    <string name="pastuTemdataanalysis">Past µTem Data Analysis</string>
    <string name="treatmentstatus">Treatment Status</string>
    <string name="addnote">Add Note</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="denied">Denied</string>
    <string name="enterdosage">Enter Dosage</string>
    <string name="editprofile">Edit Profile</string>
    <string name="switchtopatientview">Switch to Patient View</string>
    <string name="pastappointments">Past Appointments</string>
    <string name="orderbloodforpatient">Order Blood For Patient</string>
    <string name="dateunspecified">Date Unspecified</string>
    <string name="notifymedicalteam">Notify Medical Team</string>
    <string name="notificationfrommedicalteam">Notification From Medical Team</string>
    <string name="setready">Set Ready</string>
    <string name="diagnosisname">Diagnosis Name</string>
    <string name="checktreatmentstatus">Check Treatment Status</string>


    <!-- MedTeam-->
    <string name="managePatients">Manage Patients</string>
    <string name="enterpatientname">Enter Patient Name</string>
    <string name="notifydoctor">Notify Doctor</string>
    <string name="notificationfromdoctor"> Notification From Doctor</string>

    <string name="reportambulancePatient">Report Ambulance Patient</string>
    <!-- MedTeam
    <string name="no">No</string>
    <string name="deletesure">Are you sure?</string>
    <string name="heightvcm">(cm)</string>
    <string name="weightkg">(kg)</string>-->
    <string name="switchtodoctorview">Switch to doctor view</string>
    <string name="ok">Ok</string>
    <string name="noteadded">Your note is added</string>
    <string name="addnote2">Please add your note</string>
    <string name="enterUnit">Enter Unit</string>
    <string name="switchtomedview">Switch to medical team view</string>
    <!--Information cards-->
    <!--Patient-->
    <string name="PatientHomeInfo">There is nothing for today</string>
    <string name="PatientAppointmentsInfo">You don\'t have any past appointment</string>
    <!--Doctor-->

    <string name="nameerror">Name and Surname cannot be empty</string>
    <string name="nameerrorID"> Identity number ,Name and Surname cannot be empty</string>
    <string name="DoctorHomeInfo" > You have no appointments today  </string>
    <string name="DoctorNotificationsInfo"  >There isn\'t any notification   </string>
    <string name="DoctorPatientInfo"  > You have no patients  </string>
    <string name="DoctorPatientMedInfo"  >This patient doesn\'t  have any recorded medicines</string>
    <string name="DoctorPatientPastAppointmentInfo"> This patient doesn\'t have any past appointment  </string>
    <string name="DoctorPatientPastAnalysisInfo"> This patient doesn\'t have any past analysis data  </string>
    <string name="DoctorPatientOrderInfo">No order was made   </string>
    <string name="DoctorPatientTreatmentStatusInfo">No order has been made yet   </string>
    <string name="DoctorPatientSuggestionInfo">This analysis doesn\'t have any suggesitons </string>
    <!--Medical-->
    <string name="unit" >Unit</string>
    <string name="MedicalPatients"  > You have no patients </string>
    <string name="TotalPatients" >Total patients:</string>
    <string name="enterunit" >Enter Unit </string>
    <string name="noanalysisdata">No past analysis data </string>
    <string name="nobloodtype" >Blood type or Rh type is unknown, you can use blood bank page  for this patient</string>
    <string name="fillallparts" >Please fill empty parts</string>
    <string name="pastutemdataanalysis" > Past µTem Data Analysis</string>
    <string name="savedInfoPatient" >Successfully Saved</string>
    <string name="notifiedsuccess" >Your request has been sent successfully</string>
    <string name="enterTCplease" >Please enter patient\'s Identity Number </string>
    <string name="pleaseaddpatient">No patient is found with given ID, please add the patient</string>
    <string name="nowyoucan">Now you can report the patient</string>
    <string name="MedicalTODO" >There is no request to prepare</string>
    <string name="MedicalDONE" >There is no request you have prepared yet</string>
    <string name="passMedical" >Password of the saved patient: </string>
    <string name="enter_patient_id">Enter Patient ID</string>
    <string name="waiting">To Do</string>
    <string name="done1">Done</string>
    <string name="orders">Orders</string>


</resources>
