<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/doctormenu"
        android:id="@+id/menu"
        android:icon="@drawable/ic_menu_black_24dp" />
    <item
        android:title="@string/notification"
        android:id="@+id/notification"
        android:icon="@drawable/ic_event_note_black_24dp" />
    <item
        android:title="@string/patients"
        android:id="@+id/patiens"
        android:icon="@drawable/ic_people_black_24dp" />
    <item
        android:title="@string/bloodbank"
        android:id="@+id/bloodbank"
        android:icon="@drawable/ic_add_location_black_24dp" />
    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp" />
</menu>