<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bloodorderback"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/blood_radiogroup5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/producttype"
            android:textColor="#404d66"
            android:textSize="@dimen/smalltext" />

        <Button
            android:id="@+id/FFP"
            android:layout_width="20dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="Fresh Frozen   Plasma"
            android:layout_marginRight="15dp"
            android:textColor="@color/login_button"
            android:textSize="@dimen/xsmalltext"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/PC"
            android:layout_width="30dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="Platelet       Concentrate"
            android:layout_marginRight="15dp"
            android:textColor="@color/login_button"
            android:textSize="@dimen/xsmalltext"
            android:textAllCaps="false"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/blood_radiogroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/blood_radiogroup"
        app:layout_constraintStart_toStartOf="@+id/blood_radiogroup"
        app:layout_constraintTop_toBottomOf="@+id/blood_radiogroup">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="RhD Type"
            android:textColor="#404d66"
            android:textSize="@dimen/smalltext" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/positive"
            android:layout_marginRight="11dp"
            android:textColor="@color/login_button"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/negative"
            android:layout_marginRight="15dp"
            android:textColor="@color/login_button"
            android:textAllCaps="false"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/blood_radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="@+id/blood_radiogroup5"
        app:layout_constraintStart_toStartOf="@+id/blood_radiogroup5"
        app:layout_constraintTop_toBottomOf="@+id/blood_radiogroup5">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/bloodType"
            android:textColor="#404d66"
            android:textSize="@dimen/smalltext" />
        <Button
            android:id="@+id/bloodAButton"
            android:layout_marginTop="10dp"
            android:layout_width="10dp"
            android:layout_height="25dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:clickable="true"
            android:text="A"
            android:textColor="@color/login_button" />

        <Button
            android:id="@+id/bloodBButton"
            android:layout_marginTop="10dp"
            android:layout_width="10dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="B"
            android:clickable="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/login_button"
            />

        <Button
            android:id="@+id/bloodABButton"
            android:layout_marginTop="10dp"
            android:layout_width="10dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="AB"
            android:clickable="true"
            android:layout_marginRight="10dp"
            android:textColor="@color/login_button"
            />

        <Button
            android:id="@+id/blood0Button"
            android:layout_marginTop="10dp"
            android:layout_width="10dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/selectbuttonbackground"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="0"
            android:clickable="true"
            android:layout_marginRight="15dp"
            android:textColor="@color/login_button"
            />

    </RadioGroup>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/blood_radiogroup2"
        app:layout_constraintTop_toBottomOf="@+id/blood_radiogroup2"
        app:layout_constraintVertical_bias="0.0"
        >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/unitamount"
            android:textColor="#404d66"
            android:textSize="@dimen/smalltext" />
        <EditText
            android:id="@+id/editText"
            style="@style/TextInputLayout"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:autoSizeMaxTextSize="@dimen/smalltext"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enterunit"
            android:inputType="numberDecimal"
            android:textSize="@dimen/smalltext"/>
        <TextView
            android:id="@+id/addNoteText"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shadowedticked"
            android:drawableLeft="@drawable/ic_event_note_black_24dp"
            android:drawablePadding="4dp"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:layout_marginLeft="50dp"
            android:paddingRight="6dp"
            android:text="@string/addnote"
            android:textColor="@color/white"
            android:textSize="@dimen/mediumtext" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>